[gd_scene load_steps=36 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://addons/Sky/sky_texture.tscn" type="PackedScene" id=2]
[ext_resource path="res://Textures/NASA/milkywaypan_brunier_2048.jpg" type="Texture" id=3]
[ext_resource path="res://Navigation.gd" type="Script" id=4]
[ext_resource path="res://Viewports/Terrain_map_editor/Terrain_map.tscn" type="PackedScene" id=5]
[ext_resource path="res://Viewports/Splat_map_editor/Splat_map.tscn" type="PackedScene" id=6]
[ext_resource path="res://Viewports/Particle_map_editor/Particle_map.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/terrain/Pickmap/Pick_map.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/terrain/Render/Terrain_render.tscn" type="PackedScene" id=9]
[ext_resource path="res://Textures/textures.com/TexturesCom_SoilCracked0079_1_seamless_S.jpg" type="Texture" id=10]
[ext_resource path="res://Textures/textures.com/TexturesCom_SoilCracked0079_1_seamless_N.png" type="Texture" id=11]
[ext_resource path="res://Textures/misc/full_rough_no_metalic.png" type="Texture" id=12]
[ext_resource path="res://Textures/textures.com/TexturesCom_SoilBeach0131_1_seamless_S.jpg" type="Texture" id=13]
[ext_resource path="res://Textures/textures.com/TexturesCom_SoilBeach0131_1_seamless_N.png" type="Texture" id=14]
[ext_resource path="res://Textures/textures.com/TexturesCom_Grass0202_1_seamless_S.jpg" type="Texture" id=15]
[ext_resource path="res://Textures/textures.com/TexturesCom_Grass0202_1_seamless_N.png" type="Texture" id=16]
[ext_resource path="res://Textures/textures.com/TexturesCom_Cliffs0464_7_seamless_S.jpg" type="Texture" id=17]
[ext_resource path="res://Textures/textures.com/TexturesCom_Cliffs0464_7_seamless_N.png" type="Texture" id=18]
[ext_resource path="res://Textures/textures.com/TexturesCom_Snow0151_5_seamless_S.png" type="Texture" id=19]
[ext_resource path="res://Textures/textures.com/TexturesCom_Snow0151_5_seamless_N.png" type="Texture" id=20]
[ext_resource path="res://addons/terrain/Particles/grass_particles.tscn" type="PackedScene" id=21]
[ext_resource path="res://addons/terrain/Particles/terrain_particles.shader" type="Shader" id=22]
[ext_resource path="res://addons/terrain/Assets/noise_texture.png" type="Texture" id=23]
[ext_resource path="res://addons/terrain/Particles/terrain_particles.tscn" type="PackedScene" id=24]
[ext_resource path="res://Assets/rock/LP_B-Rocks_00.obj" type="ArrayMesh" id=25]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=26]

[sub_resource type="PanoramaSky" id=1]

radiance_size = 4

[sub_resource type="Environment" id=2]

background_mode = 2
background_sky = SubResource( 1 )
background_sky_custom_fov = 0.0
background_color = Color( 0, 0, 0, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 0.156863, 0.156863, 0.156863, 1 )
ambient_light_energy = 1.0
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Ambient Light", "Auto Exposure", "Background", "Fog", "Tonemap" ]

[sub_resource type="ViewportTexture" id=3]

resource_local_to_scene = true
resource_name = "HeightmapViewport"
flags = 0
viewport_path = NodePath("Viewports/Terrain_map")

[sub_resource type="ViewportTexture" id=4]

resource_local_to_scene = true
resource_name = "SplatmapViewport"
flags = 4
viewport_path = NodePath("Viewports/Splat_map")

[sub_resource type="ShaderMaterial" id=5]

resource_local_to_scene = true
render_priority = 0
shader = ExtResource( 22 )
shader_param/amplitude = null
shader_param/heightmap_size = null
shader_param/rows = null
shader_param/spacing = null
shader_param/base_scale = null
shader_param/channel = null
_sections_unfolded = [ "Resource", "Shader Param", "shader_param" ]

[sub_resource type="ViewportTexture" id=6]

resource_local_to_scene = true
flags = 4
viewport_path = NodePath("Viewports/Particle_map")
_sections_unfolded = [ "Resource" ]

[sub_resource type="SpatialMaterial" id=7]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
flags_do_not_receive_shadows = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false

[sub_resource type="ShaderMaterial" id=8]

resource_local_to_scene = true
render_priority = 0
shader = ExtResource( 22 )
shader_param/amplitude = null
shader_param/heightmap_size = null
shader_param/rows = null
shader_param/spacing = null
shader_param/base_scale = null
shader_param/channel = null
_sections_unfolded = [ "Resource", "Shader Param", "shader_param" ]

[sub_resource type="ViewportTexture" id=9]

resource_local_to_scene = true
flags = 0
viewport_path = NodePath("Viewports/Pick_map")
_sections_unfolded = [ "Resource" ]

[node name="Main" type="Spatial" index="0"]
script = ExtResource( 1 )

[node name="Sky_texture" parent="." index="0" instance=ExtResource( 2 )]
keep_3d_linear = false
night_sky = ExtResource( 3 )

[node name="Camera_Pivot" type="Position3D" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 0, 0 )
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
terrain = null

[node name="Camera" type="Camera" parent="Camera_Pivot" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50 )
keep_aspect = 1
cull_mask = 1048575
environment = SubResource( 2 )
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 2048.0
_sections_unfolded = [ "Transform", "environment" ]

[node name="DirectionalLight" type="DirectionalLight" parent="." index="2"]
transform = Transform( 0.742076, 0.450275, -0.496564, 0, 0.740792, 0.671735, 0.670316, -0.498478, 0.549724, 0, 500, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.71
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = true
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 1000.0
_sections_unfolded = [ "Directional Shadow", "Editor", "Light", "Shadow", "Transform", "Visibility" ]

[node name="Viewports" type="Spatial" parent="." index="3"]

[node name="Terrain_map" parent="Viewports" index="0" instance=ExtResource( 5 )]

[node name="Splat_map" parent="Viewports" index="1" instance=ExtResource( 6 )]

[node name="Particle_map" parent="Viewports" index="2" instance=ExtResource( 7 )]

[node name="Pick_map" parent="Viewports" index="3" instance=ExtResource( 8 )]
heightmap = SubResource( 3 )

[node name="Terrain_render" parent="." index="4" instance=ExtResource( 9 )]
target_color = Color( 0, 0.439216, 0.905882, 1 )
heightmap = SubResource( 3 )
splatmap = SubResource( 4 )
texture_scale_1 = 0.5
texture_map_1 = ExtResource( 10 )
normal_map_1 = ExtResource( 11 )
pbr_map_1 = ExtResource( 12 )
texture_map_2 = ExtResource( 13 )
normal_map_2 = ExtResource( 14 )
pbr_map_2 = ExtResource( 12 )
texture_scale_3 = 0.5
texture_map_3 = ExtResource( 15 )
normal_map_3 = ExtResource( 16 )
pbr_map_3 = ExtResource( 12 )
texture_map_4 = ExtResource( 17 )
normal_map_4 = ExtResource( 18 )
pbr_map_4 = ExtResource( 12 )
texture_map_5 = ExtResource( 19 )
normal_map_5 = ExtResource( 20 )
pbr_map_5 = ExtResource( 12 )

[node name="Grass_Particles" parent="." index="5" instance=ExtResource( 21 )]
visibility_aabb = AABB( -100, 0, -100, 200, 1000, 200 )
process_material = SubResource( 5 )
_sections_unfolded = [ "Draw Passes", "Drawing", "Geometry", "Lod", "Process Material", "Transform", "draw_pass_1", "material_override", "process_material" ]
heightmap = SubResource( 3 )
particlemap = SubResource( 6 )
noisemap = ExtResource( 23 )
rows_and_columns = 200
spacing = 0.4
particle_scale = Vector3( 0.65, 0.65, 0.65 )

[node name="Rock_Particles" parent="." index="6" instance=ExtResource( 24 )]
material_override = SubResource( 7 )
process_material = SubResource( 8 )
draw_pass_1 = ExtResource( 25 )
heightmap = SubResource( 3 )
particlemap = SubResource( 6 )
noisemap = ExtResource( 23 )
channel = 3
rows_and_columns = 50
spacing = 2.0
particle_scale = Vector3( 1, 1, 1 )

[node name="UI" parent="." index="7" instance=ExtResource( 26 )]
terrain_map = NodePath("../Viewports/Terrain_map")
splat_map = NodePath("../Viewports/Splat_map")
particle_map = NodePath("../Viewports/Particle_map")
terrain = NodePath("../Terrain_render")

[node name="Previews" type="Node" parent="." index="8"]
editor/display_folded = true

[node name="TerrainPreview" type="TextureRect" parent="Previews" index="0"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 3 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[node name="SplatmapPreview" type="TextureRect" parent="Previews" index="1"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_right = 210.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "texture" ]

[node name="ParticlemapPreview" type="TextureRect" parent="Previews" index="2"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 220.0
margin_right = 320.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 6 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="PickMapPreview" type="TextureRect" parent="Previews" index="3"]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 330.0
margin_right = 380.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 9 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect", "texture" ]

[node name="TextEdit" type="TextEdit" parent="." index="9"]
visible = false
modulate = Color( 1, 1, 1, 0.552471 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -100.0
margin_right = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "Use mouse to draw, left mouse button adds, right mouse button subtracts
Use scrollwheel to change draw size
Hold ALT to orbit camera
Hold SHIFT to move camera
Hold CONTROL to zoom"
readonly = true
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_enabled = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "Caret", "Rect", "Theme", "Visibility", "custom_colors", "custom_constants" ]

[node name="FPS" type="Label" parent="." index="10"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 5.0
margin_right = 73.0
margin_bottom = 34.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "FPS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect", "Size Flags" ]

[connection signal="terrain_has_changed" from="." to="." method="_on_Main_terrain_has_changed"]
[connection signal="sky_updated" from="Sky_texture" to="." method="_on_Sky_texture_sky_updated"]
[connection signal="brush_texture_changed" from="UI" to="." method="_on_UI_brush_texture_changed"]
[connection signal="popup_hidden" from="UI" to="." method="_on_UI_popup_hidden"]
[connection signal="popup_shown" from="UI" to="." method="_on_UI_popup_shown"]
[connection signal="time_of_day_changed" from="UI" to="." method="_on_UI_time_of_day_changed"]
